# trylang

./: Cargo.toml  README.md
crates/poopy/: Cargo.toml
crates/poopy-cli/: Cargo.toml
crates/poopy-cli/src/: main.rs
crates/poopy/src/: binding.rs  env.rs  expr.rs  func.rs  lib.rs  statement.rs  utils.rs  val.rs
crates/poopy/src/expr/: binding_usage.rs  block.rs
examples/: simple.calc
examples/llvm/: Cargo.toml
examples/llvm/src/: main.rs
src/: ast.rs  grammar.pest  lib.rs  main.rs  parser.rs  val.rs
src/compiler/: interpreter.rs  jit.rs
src/compiler/vm/: bytecode.rs  opcode.rs  vm.rs
